# route-planner

./: .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml  route-planner-mcp-server.py
apps/agent/: Dockerfile  README.md  pyproject.toml
apps/agent/src/agent_app/: __init__.py  config.py  graph.py  llm.py  main.py
apps/agent/src/agent_app/api/: __init__.py  routes.py
apps/agent/src/agent_app/models/: __init__.py  terrain.py  workflow.py
apps/agent/src/agent_app/tools/: __init__.py  human_approval.py  local_terrain.py  osm_converter.py  route_planner.py  user_memory.py
apps/web/: Dockerfile  README.md  package.json  tailwind.config.ts  tsconfig.base.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: query-provider.tsx
apps/web/src/lib/: api.ts
route_planner_mcp/: cli.py  exporter.py  pace.py  pathfinding.py  risk.py  selection.py  server.py  tool_runner.py
scripts/: convert_terrain_data.py
var/data/test/: obstacles.geojson  roads.geojson
